Black panel css

--- a/css-panel/color.black.css
+++ b/css-panel/color.black.css
@@ -14,9 +14,9 @@
 	--icon-circle: var(--primary);
 
 	--inp-text: #ffffff;
-	--inp-bg: #222124;
-	--inp-border: #222124;
-	--inp-placeholder: #727274;
+	--inp-bg: #1a1d27;
+	--inp-border: #1a1d27;
+	--inp-placeholder: #2b303c;
 	--inp-hover: var(--primary);
 
 	--link-icon: #4b4b4b;
