Black panel css

--- a/css-panel/color.black.css
+++ b/css-panel/color.black.css
@@ -14,8 +14,8 @@
 	--icon-circle: var(--primary);
 
 	--inp-text: #ffffff;
-	--inp-bg: #1a1d27;
-	--inp-border: #1a1d27;
+	--inp-bg: #171a22;
+	--inp-border: #171a22;
 	--inp-placeholder: #2b303c;
 	--inp-hover: var(--primary);
 
