--- a/css-panel/base.css
+++ b/css-panel/base.css
@@ -13,7 +13,7 @@
 	/* palette 60-30-10 */
 	--c-60p: #ffffff;
 	--c-60s: #d0d7de;
-	--c-60t: #b0c0d1;
+	--c-60t: #f6f8fa;
 	--c-30p: #f2f2fd;
 	--c-30s: #e3e5f3;
 	--c-30t: #c1c3d4;
@@ -69,7 +69,7 @@
 
 	--c-60p: #ffffff;
 	--c-60s: #d0d7de;
-	--c-60t: #b0c0d1;
+	--c-60t: #f6f8fa;
 	--c-30p: #f2f2fd;
 	--c-30s: #e3e5f3;
 	--c-30t: #c1c3d4;
