--- a/prefers-color-scheme/base.css
+++ b/prefers-color-scheme/base.css
@@ -4,25 +4,25 @@
 	/* default */
 	--font-family: 'Poppins', Arial, sans-serif;
 	--font-size: 20px;
-	--border-radius: 10px;
-	--section-gap: 160px;
+	--border-radius: 10-mainx;
+	--section-gap: 160-mainx;
 	--navbar-width: 350px;
 }
 
 :root {
 	/* palette 60-30-10 */
-	--c-60p: #ffffff;
-	--c-60s: #d0d7de;
-	--c-60t: #f6f8fa;
-	--c-30p: #f2f2fd;
-	--c-30s: #e3e5f3;
-	--c-30t: #c1c3d4;
-	--c-10p: #6f6af8;
-	--c-10s: #5f5bcf;
-	--c-10t: #4d4aac;
-	--c-00p: #06060a;
-	--c-00s: #ffffff;
-	--c-00t: #0077ff;
+	--c-60-main: #ffffff;
+	--c-60-soft: #f5f5f5;
+	--c-60-dark: #e1e6ef;
+	--c-30-main: #f2f2fd;
+	--c-30-soft: #e3e5f3;
+	--c-30-dark: #c1c3d4;
+	--c-10-main: #6f6af8;
+	--c-10-soft: #5f5bcf;
+	--c-10-dark: #4d4aac;
+	--c-00-main: #06060a;
+	--c-00-soft: #ffffff;
+	--c-00-dark: #0077ff;
 
 	/* colors */
 	--color-1: #e9ad79;
@@ -34,13 +34,13 @@
 	--color-7: #ff6a48;
 
 	/* soft colors */
-	--color-1s: #f5ddc8;
-	--color-2s: #e5ede8;
-	--color-3s: #e4d6f3;
-	--color-4s: #e8b6bd;
-	--color-5s: #999dcd;
-	--color-6s: #b1d6ff;
-	--color-7s: #e0ada1;
+	--color-1-soft: #f5ddc8;
+	--color-2-soft: #e5ede8;
+	--color-3-soft: #e4d6f3;
+	--color-4-soft: #e8b6bd;
+	--color-5-soft: #999dcd;
+	--color-6-soft: #b1d6ff;
+	--color-7-soft: #e0ada1;
 }
 
 /* color mode from browser setting */
@@ -48,18 +48,18 @@
 	:root {
 		color-scheme: dark;
 
-		--c-60p: #262833;
-		--c-60s: #353842;
-		--c-60t: #242732;
-		--c-30p: #242732;
-		--c-30s: #2e3241;
-		--c-30t: #1f222c;
-		--c-10p: #6f6af8;
-		--c-10s: #5f5bcf;
-		--c-10t: #4d4aac;
-		--c-00p: #ffffff;
-		--c-00s: #06060a;
-		--c-00t: #0077ff;
+		--c-60-main: #262833;
+		--c-60-soft: #242732;
+		--c-60-dark: #353842;
+		--c-30-main: #262a36;
+		--c-30-soft: #242833;
+		--c-30-dark: #222530;
+		--c-10-main: #6f6af8;
+		--c-10-soft: #5f5bcf;
+		--c-10-dark: #4d4aac;
+		--c-00-main: #ffffff;
+		--c-00-soft: #06060a;
+		--c-00-dark: #0077ff;
 	}
 }
 
@@ -67,41 +67,41 @@
 [color-scheme='light'] {
 	color-scheme: light;
 
-	--c-60p: #ffffff;
-	--c-60s: #d0d7de;
-	--c-60t: #f6f8fa;
-	--c-30p: #f2f2fd;
-	--c-30s: #e3e5f3;
-	--c-30t: #c1c3d4;
-	--c-10p: #6f6af8;
-	--c-10s: #5f5bcf;
-	--c-10t: #4d4aac;
-	--c-00p: #06060a;
-	--c-00s: #ffffff;
-	--c-00t: #0077ff;
+	--c-60-main: #ffffff;
+	--c-60-soft: #f5f5f5;
+	--c-60-dark: #e1e6ef;
+	--c-30-main: #f2f2fd;
+	--c-30-soft: #e3e5f3;
+	--c-30-dark: #c1c3d4;
+	--c-10-main: #6f6af8;
+	--c-10-soft: #5f5bcf;
+	--c-10-dark: #4d4aac;
+	--c-00-main: #06060a;
+	--c-00-soft: #ffffff;
+	--c-00-dark: #0077ff;
 }
 
 [color-scheme='dark'] {
 	color-scheme: dark;
 
-	--c-60p: #262833;
-	--c-60s: #353842;
-	--c-60t: #242732;
-	--c-30p: #242732;
-	--c-30s: #2e3241;
-	--c-30t: #1f222c;
-	--c-10p: #6f6af8;
-	--c-10s: #5f5bcf;
-	--c-10t: #4d4aac;
-	--c-00p: #ffffff;
-	--c-00s: #06060a;
-	--c-00t: #0077ff;
+	--c-60-main: #262833;
+	--c-60-soft: #242732;
+	--c-60-dark: #353842;
+	--c-30-main: #262a36;
+	--c-30-soft: #2b2f3d;
+	--c-30-dark: #222530;
+	--c-10-main: #6f6af8;
+	--c-10-soft: #5f5bcf;
+	--c-10-dark: #4d4aac;
+	--c-00-main: #ffffff;
+	--c-00-soft: #06060a;
+	--c-00-dark: #0077ff;
 }
 
 html {
 	font-size: var(--font-size);
 	font-family: var(--font-family);
-	background: var(--c-60p);
+	background: var(--c-60-main);
 	margin: 0;
 	padding: 0px;
 }
@@ -111,8 +111,8 @@ body {
 	margin: 0;
 	padding: 0px;
 	overflow-y: scroll;
-	color: var(--c-00p);
-	background: var(--c-60p);
+	color: var(--c-00-main);
+	background: var(--c-60-main);
 	transition: color 0.5s, background-color 0.5s;
 }
 
@@ -125,7 +125,7 @@ body {
 }
 
 ::placeholder {
-	color: var(--c-60s);
+	color: var(--c-60-soft);
 	font-size: 1rem;
 	font-weight: 500;
 }
@@ -155,24 +155,24 @@ input,
 textarea,
 select {
 	outline: none;
-	color: var(--c-00p);
-	background: var(--c-60p);
-	border: 1px solid var(--c-60s);
+	color: var(--c-00-main);
+	background: var(--c-60-main);
+	border: 1px solid var(--c-60-soft);
 	font-family: var(--font-family);
 }
 
 input:focus,
 textarea:focus,
 select:focus {
-	border: 1px solid var(--c-10p);
+	border: 1px solid var(--c-10-main);
 }
 
 a.menu-link {
 	float: left;
 	padding: 0.8rem 1.5rem;
-	margin: 10px;
+	margin: 10-mainx;
 	color: #fff;
-	background: var(--c-10p);
+	background: var(--c-10-main);
 }
 
 .select-arrow {
@@ -186,22 +186,22 @@ a.menu-link {
 }
 
 .divider {
-	border-top: 1px solid var(--c-60s);
+	border-top: 1px solid var(--c-60-soft);
 }
 
 .scrollbar {
 	overflow-y: scroll;
 	scrollbar-width: thin;
-	scrollbar-color: var(--c-60p) var(--c-60s);
+	scrollbar-color: var(--c-60-main) var(--c-60-soft);
 }
 
 .scrollbar::-webkit-scrollbar {
 	width: 4px;
-	background-color: var(--c-60s);
+	background-color: var(--c-60-soft);
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
-	background: var(--c-60p);
+	background: var(--c-60-main);
 }
 
 .text-gradient {
@@ -218,7 +218,7 @@ a.menu-link {
 
 .input-border {
 	border: 1px solid transparent;
-	background: linear-gradient(var(--c-60s), var(--c-60s)) padding-box, linear-gradient(to right, #0077ff, #cc55cc) border-box;
+	background: linear-gradient(var(--c-60-soft), var(--c-60-soft)) padding-box, linear-gradient(to right, #0077ff, #cc55cc) border-box;
 }
 
 #app {
@@ -227,13 +227,13 @@ a.menu-link {
 	margin: 0px;
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 1600-mainx) {
 	:root {
 		--font-size: 18px;
 	}
 
 	#page-wraper {
-		max-width: 1600px;
+		max-width: 1600-mainx;
 	}
 }
 
@@ -266,3 +266,88 @@ a.menu-link {
 		max-width: 100%;
 	}
 }
+
+/*
+<div class="bg">
+  <div>
+    <div>60 main</div>
+    <div class="bg0">
+      <p>60 soft</p>
+    </div>
+    <div class="bg00">
+      <p>60 dark</p>
+    </div>
+    <button class="btn">Button</button>
+  </div>
+  <div class="bg1">
+    <p>30 main navbar</p>
+    <div class="bg2">
+      <p>30 soft</p>
+    </div>
+    <div class="bg3">
+      <p>30 dark</p>
+    </div>
+  </div>
+</div>
+
+<style>
+.bg {
+	display: flex;
+	width: 96%;
+	margin: 2%;
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-60-main);
+	border: 1px solid var(--c-60-dark);
+}
+.bg div {
+	width: 100%;
+	padding: 20px;
+	border-radius: 10px;
+}
+.bg0 {
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-60-soft);
+	border: 1px solid var(--c-60-dark);
+	border-radius: 10px;
+}
+.bg00 {
+	margin-top: 20px;
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-60-dark);
+	border: 1px solid var(--c-60-dark);
+	border-radius: 10px;
+}
+.bg1 {
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-30-main);
+	border: 1px solid var(--c-60-soft);
+}
+.bg2 {
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-30-soft);
+	border-radius: 10px;
+}
+.bg3 {
+	margin-top: 20px;
+	padding: 20px;
+	color: var(--c-00-main);
+	background: var(--c-30-dark);
+	border-radius: 10px;
+}
+.btn {
+	float: left;
+	color: #fff;
+	background: var(--c-10-main);
+	border: transparent;
+	padding: 15px 25px;
+	border-radius: 10px;
+	font-size: 1.2rem;
+	margin-top: 20px;
+}
+</style>
+*/
