--- a/css-panel/base.css
+++ b/css-panel/base.css
@@ -4,25 +4,20 @@
 	/* default */
 	--font-family: 'Poppins', Arial, sans-serif;
 	--font-size: 20px;
-	--border-radius: 10-mainx;
-	--section-gap: 160-mainx;
+	--border-radius: 10px;
+	--section-gap: 160px;
 	--navbar-width: 350px;
 }
 
 :root {
 	/* palette 60-30-10 */
-	--c-60-main: #ffffff;
-	--c-60-soft: #f5f5f5;
-	--c-60-dark: #e1e6ef;
-	--c-30-main: #f2f2fd;
-	--c-30-soft: #e3e5f3;
-	--c-30-dark: #c1c3d4;
-	--c-10-main: #6f6af8;
-	--c-10-soft: #5f5bcf;
-	--c-10-dark: #4d4aac;
-	--c-00-main: #06060a;
-	--c-00-soft: #ffffff;
-	--c-00-dark: #0077ff;
+	--bg-primary: #ffffff;
+	--bg-secondary: #f5f5f5;
+	--text-primary: #06060a;
+	--text-secondary: #ffffff;
+	--accent-primary: #6f6af8;
+	--accent-secondary: #4f4bad;
+	--divider-primary: #e1e6ef;
 
 	/* colors */
 	--color-1: #e9ad79;
@@ -48,18 +43,13 @@
 	:root {
 		color-scheme: dark;
 
-		--c-60-main: #262833;
-		--c-60-soft: #242732;
-		--c-60-dark: #353842;
-		--c-30-main: #262a36;
-		--c-30-soft: #242833;
-		--c-30-dark: #222530;
-		--c-10-main: #6f6af8;
-		--c-10-soft: #5f5bcf;
-		--c-10-dark: #4d4aac;
-		--c-00-main: #ffffff;
-		--c-00-soft: #06060a;
-		--c-00-dark: #0077ff;
+		--bg-primary: #262833;
+		--bg-secondary: #242732;
+		--text-primary: #ffffff;
+		--text-secondary: #eeeeee;
+		--accent-primary: #6f6af8;
+		--accent-secondary: #4f4bad;
+		--divider-primary: #353842;
 	}
 }
 
@@ -67,41 +57,31 @@
 [color-scheme='light'] {
 	color-scheme: light;
 
-	--c-60-main: #ffffff;
-	--c-60-soft: #f5f5f5;
-	--c-60-dark: #e1e6ef;
-	--c-30-main: #f2f2fd;
-	--c-30-soft: #e3e5f3;
-	--c-30-dark: #c1c3d4;
-	--c-10-main: #6f6af8;
-	--c-10-soft: #5f5bcf;
-	--c-10-dark: #4d4aac;
-	--c-00-main: #06060a;
-	--c-00-soft: #ffffff;
-	--c-00-dark: #0077ff;
+	--bg-primary: #ffffff;
+	--bg-secondary: #f5f5f5;
+	--text-primary: #06060a;
+	--text-secondary: #ffffff;
+	--accent-primary: #6f6af8;
+	--accent-secondary: #4f4bad;
+	--divider-primary: #e1e6ef;
 }
 
 [color-scheme='dark'] {
 	color-scheme: dark;
 
-	--c-60-main: #262833;
-	--c-60-soft: #242732;
-	--c-60-dark: #353842;
-	--c-30-main: #262a36;
-	--c-30-soft: #2b2f3d;
-	--c-30-dark: #222530;
-	--c-10-main: #6f6af8;
-	--c-10-soft: #5f5bcf;
-	--c-10-dark: #4d4aac;
-	--c-00-main: #ffffff;
-	--c-00-soft: #06060a;
-	--c-00-dark: #0077ff;
+	--bg-primary: #262833;
+	--bg-secondary: #242732;
+	--text-primary: #ffffff;
+	--text-secondary: #eeeeee;
+	--accent-primary: #6f6af8;
+	--accent-secondary: #4f4bad;
+	--divider-primary: #353842;
 }
 
 html {
 	font-size: var(--font-size);
 	font-family: var(--font-family);
-	background: var(--c-60-main);
+	background: var(--bg-primary);
 	margin: 0;
 	padding: 0px;
 }
@@ -111,8 +91,8 @@ body {
 	margin: 0;
 	padding: 0px;
 	overflow-y: scroll;
-	color: var(--c-00-main);
-	background: var(--c-60-main);
+	color: var(--text-primary);
+	background: var(--bg-primary);
 	transition: color 0.5s, background-color 0.5s;
 }
 
@@ -125,18 +105,18 @@ body {
 }
 
 ::placeholder {
-	color: var(--c-60-soft);
+	color: var(--divider-primary);
 	font-size: 1rem;
 	font-weight: 500;
 }
 
 ::selection {
-	background: var(--color-6);
+	background: var(--accent-primary);
 	color: #fff;
 }
 
 a {
-	color: var(--color-6);
+	color: var(--accent-primary);
 	text-decoration: none;
 	transition: 0.4s;
 }
@@ -155,24 +135,24 @@ input,
 textarea,
 select {
 	outline: none;
-	color: var(--c-00-main);
-	background: var(--c-60-main);
-	border: 1px solid var(--c-60-soft);
+	color: var(--text-primary);
+	background: var(--bg-secondary);
+	border: 1px solid var(--divider-primary);
 	font-family: var(--font-family);
 }
 
 input:focus,
 textarea:focus,
 select:focus {
-	border: 1px solid var(--c-10-main);
+	border: 1px solid var(--accent-primary);
 }
 
 a.menu-link {
 	float: left;
 	padding: 0.8rem 1.5rem;
-	margin: 10-mainx;
+	margin: 10px;
 	color: #fff;
-	background: var(--c-10-main);
+	background: var(--accent-primary);
 }
 
 .select-arrow {
@@ -186,22 +166,22 @@ a.menu-link {
 }
 
 .divider {
-	border-top: 1px solid var(--c-60-soft);
+	border-top: 1px solid var(--divider-primary);
 }
 
 .scrollbar {
 	overflow-y: scroll;
 	scrollbar-width: thin;
-	scrollbar-color: var(--c-60-main) var(--c-60-soft);
+	scrollbar-color: var(--bg-secondary) var(--bg-primary);
 }
 
 .scrollbar::-webkit-scrollbar {
 	width: 4px;
-	background-color: var(--c-60-soft);
+	background-color: var(--bg-secondary);
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
-	background: var(--c-60-main);
+	background: var(--bg-primary);
 }
 
 .text-gradient {
@@ -218,7 +198,7 @@ a.menu-link {
 
 .input-border {
 	border: 1px solid transparent;
-	background: linear-gradient(var(--c-60-soft), var(--c-60-soft)) padding-box, linear-gradient(to right, #0077ff, #cc55cc) border-box;
+	background: linear-gradient(var(--divider-primary), var(--divider-primary)) padding-box, linear-gradient(to right, #0077ff, #cc55cc) border-box;
 }
 
 #app {
@@ -227,13 +207,13 @@ a.menu-link {
 	margin: 0px;
 }
 
-@media (max-width: 1600-mainx) {
+@media (max-width: 1600px) {
 	:root {
 		--font-size: 18px;
 	}
 
 	#page-wraper {
-		max-width: 1600-mainx;
+		max-width: 1600px;
 	}
 }
 
@@ -268,81 +248,78 @@ a.menu-link {
 }
 
 /*
+<template>
 <div class="bg">
-  <div>
-    <div>60 main</div>
-    <div class="bg0">
-      <p>60 soft</p>
-    </div>
-    <div class="bg00">
-      <p>60 dark</p>
-    </div>
-    <button class="btn">Button</button>
-  </div>
-  <div class="bg1">
-    <p>30 main navbar</p>
-    <div class="bg2">
-      <p>30 soft</p>
-    </div>
-    <div class="bg3">
-      <p>30 dark</p>
-    </div>
-  </div>
-</div>
-
-<style>
+		<section>
+			<h1>Dashboard</h1>
+		</section>
+		<section>
+			<div class="title">Inventory</div>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus ex, laudantium repellendus optio odio omnis consequatur rem sit quaerat vero tenetur praesentium cumque aperiam totam corrupti quasi quae obcaecati quod.</p>
+			<div class="flex">
+				<div class="box">
+					<h3>Total ernings</h3>
+					<p>12,999.00</p>
+				</div>
+				<div class="box">
+					<h3>Total ernings</h3>
+					<p>12,999.00</p>
+				</div>
+				<div class="box">
+					<h3>Total ernings</h3>
+					<p>12,999.00</p>
+				</div>
+			</div>
+			<button class="btn">Button</button>
+		</section>
+	</div>
+</template>
+<style scoped>
+h1 {
+	float: left;
+	width: 100%;
+}
 .bg {
-	display: flex;
+	float: left;
 	width: 96%;
 	margin: 2%;
 	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-60-main);
-	border: 1px solid var(--c-60-dark);
+	color: var(--text-primary);
+	background: var(--bg-secondary);
+	border: 1px solid var(--divider-primary);
+	overflow: hidden;
 }
-.bg div {
+.bg section {
+	float: left;
 	width: 100%;
 	padding: 20px;
+	margin: 10px 0px;
 	border-radius: 10px;
+	background: var(--bg-primary);
+	border: 1px solid var(--divider-primary);
 }
-.bg0 {
-	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-60-soft);
-	border: 1px solid var(--c-60-dark);
-	border-radius: 10px;
+.bg section .title {
+	font-weight: 900;
+	font-size: 25px;
 }
-.bg00 {
-	margin-top: 20px;
-	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-60-dark);
-	border: 1px solid var(--c-60-dark);
-	border-radius: 10px;
+.flex {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 10px;
+	flex-wrap: wrap;
 }
-.bg1 {
+.flex .box {
+	float: left;
+	width: 30.333%;
 	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-30-main);
-	border: 1px solid var(--c-60-soft);
-}
-.bg2 {
-	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-30-soft);
-	border-radius: 10px;
-}
-.bg3 {
-	margin-top: 20px;
-	padding: 20px;
-	color: var(--c-00-main);
-	background: var(--c-30-dark);
+	border: 1px solid var(--divider-primary);
 	border-radius: 10px;
 }
 .btn {
 	float: left;
 	color: #fff;
-	background: var(--c-10-main);
+	background: var(--accent-primary);
 	border: transparent;
 	padding: 15px 25px;
 	border-radius: 10px;
@@ -350,4 +327,5 @@ a.menu-link {
 	margin-top: 20px;
 }
 </style>
+
 */
