--- a/css-panel/colors.css
+++ b/css-panel/colors.css
@@ -244,6 +244,17 @@ vscode replace: --blue-$1 $2;
 	--btn-cookie-primary: #2d4156;
 	--btn-cookie-secondary: #eaeff2;
 
+	/* theme white */
+	--tw-1: #ffffff;
+	--tw-2: #f3f5f7;
+	--tw-4: #d1dce8;
+	--tw-3: #989fb0;
+	--tw-5: #151819;
+	--tw-6: #faac63;
+	--tw-7: #2ed552;
+	--tw-8: #4590e0;
+	--tw-9: #bc7cf4;
+
 	/* theme dark */
 	--to-1: #1e1e1d;
 	--to-2: #242423;
