--- a/css-panel/base.css
+++ b/css-panel/base.css
@@ -15,13 +15,9 @@
 	--bg-secondary: #f5f5f5;
 	--text-primary: #06060a;
 	--text-secondary: #ffffff;
-	--accent-primary: #6f6af8;
-	--accent-secondary: #4f4bad;
+	--accent-primary: #0249fe;
+	--accent-secondary: #1b5bff;
 	--divider-primary: #e1e6ef;
-
-	/* buttons */
-	--btn-cookie-primary: #2d4156;
-	--btn-cookie-secondary: #eaeff2;
 
 	/* colors */
 	--color-1: #e9ad79;
@@ -31,6 +27,8 @@
 	--color-5: #3e4589;
 	--color-6: #3976bc;
 	--color-7: #ff6a48;
+	--color-8: #00b2ad;
+	--color-9: #021c6d;
 
 	/* soft colors */
 	--color-1-soft: #f5ddc8;
@@ -40,6 +38,16 @@
 	--color-5-soft: #999dcd;
 	--color-6-soft: #b1d6ff;
 	--color-7-soft: #e0ada1;
+	--color-8-soft: #78bab8;
+	--color-9-soft: #2c3a64;
+
+	/* buttons */
+	--btn-cookie-primary: #2d4156;
+	--btn-cookie-secondary: #eaeff2;
+	--btn-orange-primary: #ff5f30;
+	--btn-orange-secondary: #fe393b;
+	--btn-pink-primary: #ffd3e9;
+	--btn-pink-secondary: #1630c2;
 }
 
 /* color mode from browser setting */
@@ -157,6 +165,10 @@ a.menu-link {
 	margin: 10px;
 	color: #fff;
 	background: var(--accent-primary);
+}
+
+a.menu-link:hover {
+	background: var(--accent-secondary);
 }
 
 .select-arrow {
