--- a/css-colors/base.css
+++ b/css-colors/base.css
@@ -114,6 +114,10 @@ body {
 	transition: color 0.5s, background-color 0.5s;
 }
 
+iframe {
+	color-scheme: light !important;
+}
+
 *,
 *::before,
 *::after {
